<resources>
    <string name="app_name">CustomRecyclerViewExample</string>
    <string name="change">Change</string>
    <string name="add_item">Add</string>
    <string name="click">Click</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="data_type">Data type</string>
    <string name="red">Red</string>
    <string name="dk_gray">DKGray</string>
    <string name="green">Green</string>
    <string name="lt_gray">LTGray</string>
    <string name="blue">Blue</string>
    <string name="cyan">Cyan</string>
</resources>
